# lsu-aie

./: README.md  env.example  pyproject.toml
embedding/: embed.py
scraper/: web-qa.py
src/: functions.py  main.py  questions.py
